Fix the issue that shell collapses in Firefox sometime
https://github.com/rancher/rancher/issues/10643

--- a/app/styles/components/_container-shell.scss
+++ b/app/styles/components/_container-shell.scss
@@ -18,6 +18,7 @@
   margin: 0 auto;
   font-size: 12px;
   font-family: "Lucida Console", Monaco, "Courier New", monospace;
+  height: calc(100vh - 280px);
 }
 
 .fullscreen-modal {
